src/pages/Home/Navbar/Navbar.module.css
.navbar {
  display: flex;
  padding-left: 2rem;
  padding-right: 2rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
  align-items: center;
  justify-content: space-between;
  background-color: transparent;
}

.logo {
  width: 60px;
  height: 60px;
}

.navItems {
  display: flex;
}

.navItem { padding: 10px;
  font-family: "poppins";
  color: #030303;
  cursor: pointer;
}
.loader {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  border: 4px solid pink;
  border-top-color: transparent;
  animation: spin 1s infinite ease-in-out;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.nonpremiumBadge {
  margin-top: 5px;
  height: 20px;
  display: inline-block;
  padding: 5px;
  background-color: black; /* Pink Background color */
  color: #fff; /* Text color */
  border-radius: 10%; /* Circular border */
  margin-left: 10px; /* Add space to the left of the badge */
  cursor: pointer; /* Change cursor to pointer on hover */
  transition: background-color 0.3s; /* Add a smooth background color transition on hover */

  &:hover {
    background-color: #F3CFC6; /* Darker pink on hover */
  }
}
.premiumBadge {
  margin-top: 5px;
  height: 20px;
  display: inline-block;
  padding: 5px;
  background-color: PINK; /* Pink Background color */
  color: #fff; /* Text color */
  border-radius: 10%; /* Circular border */
  margin-left: 10px; /* Add space to the left of the badge */
  cursor: pointer; /* Change cursor to pointer on hover */
  transition: background-color 0.3s; /* Add a smooth background color transition on hover */

  &:hover {
    background-color: #F3CFC6; /* Darker pink on hover */
  }
}

